Menu and Z-index

--- a/CSS/CSS - Layout/menu.html
+++ b/CSS/CSS - Layout/menu.html
@@ -12,21 +12,20 @@
 </head>
 
 <body>
-    <div>
-        <ul id="list1">
+    
+        <ul>
             <li class="active">Home</li>
             <li>Menu 1</li>
-            <li id="menu2">Menu 2
-                <ul id="lista2">
+            <li class="dropdown">Menu 2
+                <ul>
                     <li>Sub Menu 1</li>
                     <li>Sub Menu 2</li>
                     <li>Sub Menu 3</li>
                 </ul>
-
             </li>
             <li>Menu 3</li>
         </ul>
-    </div>
+    
 
 
 
