--- a/CSS/CSS - Layout/Dropdown menu/menu.html
+++ b/CSS/CSS - Layout/Dropdown menu/menu.html
@@ -12,22 +12,30 @@
 </head>
 
 <body>
-    
+    <div id="menu">
         <ul>
-            <li class="active">Home</li>
+            <li class='aktivno'>Home</li>
             <li>Menu 1</li>
-            <li class="dropdown">Menu 2
+            <li id="lista">Menu 2
                 <ul>
-                    <li>Sub Menu 1</li>
-                    <li>Sub Menu 2</li>
-                    <li>Sub Menu 3</li>
+                    <li>Sub menu 1</li>
+                    <li>Sub menu 2</li>
+                    <li>Sub menu 3</li>
                 </ul>
             </li>
             <li>Menu 3</li>
+
+
+
         </ul>
-    
 
 
+
+
+
+
+
+    </div>
 
 </body>
 
