--- a/CSS/IMAGES AND LAYOUT/float.html
+++ b/CSS/IMAGES AND LAYOUT/float.html
@@ -12,7 +12,7 @@
 
 <body>
     <div id="main">
-        <div id="nav">
+        <header id="nav" class="cf">
             <ul>
                 <li>Blog</li>
                 <li>Contact</li>
@@ -20,84 +20,99 @@
                 <li>Home</li>
 
             </ul>
-        </div>
-        <img src="picture.jpg" alt="HTML CSS" height="490" width="960">
+        </header>
 
 
+        <main>
+            <img src="picture.jpg" alt="HTML CSS" height="490" width="960">
 
-        <div id="box1">
-            <img src="http://via.placeholder.com/300x200">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, dicta? Iusto at culpa, nisi cumque
-                voluptates dignissimos quibusdam ab, quod ipsa praesentium blanditiis. Modi, est.</p>
-
-        </div>
-
-        <div id="box2">
-            <img src="http://via.placeholder.com/300x200">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio nostrum, rerum numquam doloribus
-                temporibus expedita eveniet iste explicabo tempore adipisci molestiae dolores quidem soluta autem?
-            </p>
-        </div>
+            <div class="cf">
 
 
-        <div id="box3">
-            <ul>
-                <li>Rebulding slack.com</li>
-                <hr>
-                <li>Zasto bootcamp format</li>
-                <hr>
-                <li>React - prozor u svet web aplikacija</li>
-                <hr>
-                <li>
-                    Najvece zablude o programerima u Srbiji
-                </li>
-                <hr>
-            </ul>
+                <article id="box1">
+                    <img src="http://via.placeholder.com/300x200">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, dicta? Iusto at culpa, nisi cumque
+                        voluptates dignissimos quibusdam ab, quod ipsa praesentium blanditiis. Modi, est.</p>
 
-        </div>
+                </article>
 
-        <div id="box4">
-            <img src="http://via.placeholder.com/300x200">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio nostrum, rerum numquam doloribus
-                temporibus expedita eveniet iste explicabo tempore adipisci molestiae dolores quidem soluta autem?
-            </p>
-        </div>
-        <div id="box5">
-            <img src="http://via.placeholder.com/300x200">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio nostrum, rerum numquam doloribus
-                temporibus expedita eveniet iste explicabo tempore adipisci molestiae dolores quidem soluta autem?
-            </p>
-        </div>
-        <div id="box6">
-            <img src="http://via.placeholder.com/300x200">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio nostrum, rerum numquam doloribus
-                temporibus expedita eveniet iste explicabo tempore adipisci molestiae dolores quidem soluta autem?
-            </p>
-        </div>
+                <article id="box2">
+                    <img src="http://via.placeholder.com/300x200">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio nostrum, rerum numquam doloribus
+                        temporibus expedita eveniet iste explicabo tempore adipisci molestiae dolores quidem soluta
+                        autem?
+                    </p>
+                </article>
 
-        <div id="box7">
-            <img src="http://via.placeholder.com/300x200">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio nostrum, rerum numquam doloribus
-                temporibus expedita eveniet iste explicabo tempore adipisci molestiae dolores quidem soluta autem?
-            </p>
-        </div>
-        <div id="box8">
-            <img src="http://via.placeholder.com/300x200">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio nostrum, rerum numquam doloribus
-                temporibus expedita eveniet iste explicabo tempore adipisci molestiae dolores quidem soluta autem?
-            </p>
-        </div>
-        <div id="box9">
-            <img src="http://via.placeholder.com/300x200">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio nostrum, rerum numquam doloribus
-                temporibus expedita eveniet iste explicabo tempore adipisci molestiae dolores quidem soluta autem?
-            </p>
-        </div>
+
+                <nav id="box3">
+                    <ul>
+                        <li>Rebulding slack.com</li>
+                        <hr>
+                        <li>Zasto bootcamp format</li>
+                        <hr>
+                        <li>React - prozor u svet web aplikacija</li>
+                        <hr>
+                        <li>
+                            Najvece zablude o programerima u Srbiji
+                        </li>
+                        <hr>
+                    </ul>
+
+                </nav>
+
+                <article id="box4">
+                    <img src="http://via.placeholder.com/300x200">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio nostrum, rerum numquam doloribus
+                        temporibus expedita eveniet iste explicabo tempore adipisci molestiae dolores quidem soluta
+                        autem?
+                    </p>
+                </article>
+                <article id="box5">
+                    <img src="http://via.placeholder.com/300x200">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio nostrum, rerum numquam doloribus
+                        temporibus expedita eveniet iste explicabo tempore adipisci molestiae dolores quidem soluta
+                        autem?
+                    </p>
+                </article>
+                <article id="box6">
+                    <img src="http://via.placeholder.com/300x200">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio nostrum, rerum numquam doloribus
+                        temporibus expedita eveniet iste explicabo tempore adipisci molestiae dolores quidem soluta
+                        autem?
+                    </p>
+                </article>
+
+                <article id="box7">
+                    <img src="http://via.placeholder.com/300x200">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio nostrum, rerum numquam doloribus
+                        temporibus expedita eveniet iste explicabo tempore adipisci molestiae dolores quidem soluta
+                        autem?
+                    </p>
+                </article>
+                <article id="box8">
+                    <img src="http://via.placeholder.com/300x200">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio nostrum, rerum numquam doloribus
+                        temporibus expedita eveniet iste explicabo tempore adipisci molestiae dolores quidem soluta
+                        autem?
+                    </p>
+                </article>
+                <article id="box9">
+                    <img src="http://via.placeholder.com/300x200">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio nostrum, rerum numquam doloribus
+                        temporibus expedita eveniet iste explicabo tempore adipisci molestiae dolores quidem soluta
+                        autem?
+                    </p>
+                </article>
+            </div>
+
     </div>
+    </main>
 
-    <div class="footer">
+    <footer class="footer">
+        <p id="footer_text">© BitStudent</p>
 
-    </div>
+    </footer>
 
 
 
