--- a/CSS/CSS PROJECT WEEK 3/build_estate.html
+++ b/CSS/CSS PROJECT WEEK 3/build_estate.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="main.css" type="text/css">
+    <script src="https://kit.fontawesome.com/c15165225c.js" crossorigin="anonymous"></script>
+
+
     <title>Build Estate</title>
 </head>
 
@@ -54,17 +57,198 @@
                 <div id="line-down2"></div>
 
             </div>
+            <div id="section2" class="cf">
+                <div id="welcome">
+                    <h4>Welcome to Our Build Estate</h4>
+                    <p>If you can build buildings, why sit on the beach? We always think of buildings in their settings,
+                        but
+                        so other architects.</p>
+                    <ul>
+                        <li>Interntional Office Buildings.</li>
+                        <li>Apartment on Premier House.</li>
+                        <li>Pices Are Low & Parking Allowance.</li>
+                        <li>Best Design Architecture. </li>
+                    </ul>
+
+                </div>
+
+                <div id="slikaabout">
+
+                    <img src="./img/about.jpg" alt="Buildings" width="400px">
+                </div>
+
+                <div id="we-make">
+                    <h4>We Make Your Dream Home</h4>
+                    <p>"For decades engineers have stood accused that their buildings do not have any cultural value. We
+                        have attempted to liberate engineering of this accusation."</p>
+                    <ul>
+                        <li>Great Engineers Ideas.</li>
+                        <li>Planning For Future Model Buildings.</li>
+                        <li>Modern Apartment With Large Space.</li>
+                        <li>New Residential Complex Features.</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <!--SECTION 3-->
+        <section id="section3" class="cf">
+
+            <h2 id="head3"> What People Say</h2>
+            <div id="underline" class="cf">
+
+                <div id="line-down"></div>
+                <div id="square"></div>
+                <div id="line-down2"></div>
+
+            </div>
+            <article id="one" class="cf">
+                <div class="cf">
+                    <div id="wili">
+                        <img id='wiliamson' src="./img/t1.jpg" width='65px'>
+                    </div>
+
+                    <div id="wiliamsonid">
+                        <h5>WILLIAMSON <br> <br>
+                            <img src="./img/star.jpg" alt="star" width="55px">
+                        </h5>
+                    </div>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis blanditiis ratione assumenda
+                    cum sed quidem molestiae alias rem perferendis eveniet, inventore aspernatur.</p>
 
 
+            </article>
+
+
+
+            <article id="one" class="cf">
+
+                <div class="cf">
+                    <div id="wili">
+                        <img id='wiliamson' src="./img/t2.jpg" width='65px'>
+                    </div>
+
+                    <div id="wiliamsonid">
+                        <h5>JENNIFER LOPEZ <br> <br>
+                            <img src="./img/star.jpg" alt="star" width="55px">
+                        </h5>
+                    </div>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis blanditiis ratione assumenda
+                    cum sed quidem molestiae alias rem perferendis eveniet, inventore aspernatur.</p>
+
+
+            </article>
+
+            <article id="one" class="cf">
+
+                <div class="cf">
+                    <div id="wili">
+                        <img id='wiliamson' src="./img/t3.jpg" width='65px'>
+                    </div>
+
+                    <div id="wiliamsonid">
+                        <h5>SELENA GOMEZ <br> <br>
+                            <img src="./img/star.jpg" alt="star" width="55px">
+                        </h5>
+                    </div>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis blanditiis ratione assumenda
+                    cum sed quidem molestiae alias rem perferendis eveniet, inventore aspernatur.</p>
+
+
+            </article>
 
         </section>
 
 
 
+        <!--------------------------------------------SECTION 4------------------------->
+        <section id="section4">
+
+            <h2 id="head4">Get in Touch With US</h2>
+
+            <div id="underline" class="cf">
+
+                <div id="line-down"></div>
+                <div id="square"></div>
+                <div id="line-down2"></div>
+
+            </div>
+            <div id="icon" class="cf">
+                <div id="contact">
+                    <h3> CONTACT US</h3>
+                    <p>
+                        <h6> <span>&#9743 </span> +0(21) 000 123 3120</h6>
+
+                        <h6><span>&#64 </span>mail@example.com</h6>
+                    </p>
+                </div>
+
+                <div id="connect">
+                    <h3> CONNECT US</h3>
+
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-linkedin-in"></i>
+                </div>
+
+                <div id="adress">
+                    <h3>ADDRESS</h3>
+                    <p> <i class="fas fa-map-marker-alt"></i> 1680 Richmond S1, Empire State 856,
+                        USA </p>
+                </div>
+                <div id="house">
+                    <img src="./img/house.png" alt="house">
+                </div>
+            </div>
+
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d48407.393673361556!2d-74.01556511215145!3d40.68581931132467!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2srs!4v1572258464255!5m2!1sen!2srs"
+                width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+
+
+            <!--------------------------------SECTION 5------------------------->
+
+            <section id="section5">
+
+                <h2 id="header5">Mail US</h2>
+                <div id="underline" class="cf">
+
+                    <div id="line-down"></div>
+                    <div id="square"></div>
+                    <div id="line-down2"></div>
+
+                </div>
+
+                <form action="build_estate.html" method="GET" class="cf">
+                    <input class="input_name" type="text" placeholder="Name" name="name">
+                    <input class="input_email" type="email" placeholder="Email" name="email">
+                    <input class="input_phone" type="number" placeholder="Telephone" name="telephone">
+
+                    <textarea class="input_message" name="message" id="message" placeholder="Message"></textarea>
+
+                    <input class="form-button" type="submit" name="submit" value="Submit">
+
+                </form>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+            </section>
+
     </div>
-
-
-
 </body>
 
 </html>
