--- a/CSS/CSS PROJECT WEEK 3/build_estate.html
+++ b/CSS/CSS PROJECT WEEK 3/build_estate.html
@@ -230,23 +230,17 @@
                     <textarea class="input_message" name="message" id="message" placeholder="Message"></textarea>
 
                     <input class="form-button" type="submit" name="submit" value="Submit">
-
                 </form>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
             </section>
+
+
+            <!----------------------------------------------------FOOTER--------------------------------------------------------->
+            <footer>
+
+
+            </footer>
+
+
 
     </div>
 </body>
