--- a/BOOTSTRAP/BOOTSTRAP_PROJECT/index.html
+++ b/BOOTSTRAP/BOOTSTRAP_PROJECT/index.html
@@ -70,12 +70,15 @@
         </div>
 
         <div class="row that">
-            <div class="col-md-12 background1">
+            <div class="col-md-4 background1"></div>
+            <div class="col-md-4 background1 float-star">
+
                 <span class="line_left"></span>
                 <i class="fa fa-star star1"></i>
                 <span class="line_right"></span>
 
             </div>
+            <div class="col-md-4 background1"></div>
         </div>
         <div class="row">
             <div class="col-md-12 background1 text1">
@@ -92,12 +95,14 @@
         </div>
 
         <div class="row">
-            <div class="col-md-12 background2">
+            <div class="col-md-4"></div>
+            <div class="col-md-4 float-star">
                 <span class="line_left1"></span>
                 <i class="fa fa-star star2"></i>
                 <span class="line_right1"></span>
 
             </div>
+            <div class="col-md-4"></div>
         </div>
 
 
@@ -134,7 +139,140 @@
         <!-----------------------------------------------ABOUT---------------------------------->
         <section id="about">
 
+            <h2 id="about-head">ABOUT ME</h2>
+
+            <div class="row that">
+                <div class="col-md-4 background1"></div>
+                <div class="col-md-4 background1 float-star">
+
+                    <span class="line_left"></span>
+                    <i class="fa fa-star star1"></i>
+                    <span class="line_right"></span>
+                </div>
+                <div class="col-md-4 background1"></div>
+            </div>
+
+            <div class="row">
+                <div id="text">
+                    <div class="row text1">
+                        <div class="col-md-6">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat commodi in debitis quia,
+                            soluta mollitia reiciendis deserunt velit. Voluptatibus quaerat modi quidem? Delectus iusto
+                            dolorem error alias magnam sed exercitationem.
+                        </div>
+                        <div class="col-md-6">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda nihil tenetur libero
+                            quia placeat commodi similique dicta ea consectetur nobis, adipisci voluptas ab ut quis
+                            neque est dolore corporis ratione!
+                        </div>
+                    </div>
+                    <button id="btn"><i class="fa fa-info-circle"></i>Find Out More</button>
+                </div>
+            </div>
+
         </section>
+
+
+
+        <!--------------------------------------form--------------------------------->
+
+        <h2 id="contact_me">CONTACT ME</h2>
+
+        <div class="row">
+            <div class="col-md-4"></div>
+            <div class="col-md-4 float-star">
+                <span class="line_left1"></span>
+                <i class="fa fa-star star2"></i>
+                <span class="line_right1"></span>
+
+            </div>
+            <div class="col-md-4"></div>
+        </div>
+
+        <!---- <div class="row">
+            <div id="forma">
+                <div class="row forma1">
+
+                </div>
+                <button id="btn"><i class="fa fa-info-circle"></i>Find Out More</button>
+            </div>
+        </div> ------>
+
+        <form>
+            <div class="form-group">
+                <label for="exampleFormControlInput1">Name</label>
+                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Your Name">
+            </div>
+            <div class="form-group">
+                <label for="exampleFormControlInput1">Email address</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email">
+            </div>
+            <div class="form-group">
+                <label for="exampleFormControlInput1">Phone Number</label>
+                <input type="number" class="form-control" id="exampleFormControlInput1" placeholder="Phone Number">
+            </div>
+
+
+            <div class="form-group">
+                <label for="exampleFormControlTextarea1">Message</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
+                    placeholder="Message"></textarea>
+            </div>
+            <button type="button" class="btn btn-outline-primary btn-sm button2">Send</button>
+        </form>
+
+
+
+        <footer>
+
+            <div id="footer-div">
+                <div class="row">
+                    <div class="col-md-4">
+                        <h1 id="location-head">LOCATION</h1>
+                        <p>Centar za obrazovanje <br>
+                            BIT TECHNOLOGY <br>
+                            Nemanjina 4/I, Beograd</p>
+                    </div>
+                    <div class="col-md-4">
+                        <h1 id="location-head">AROUND THE WEB</h1> <br>
+                        <i class="fab fa-facebook-f icon-footer"></i>
+                        <i class="fab fa-google-plus-g icon-footer"></i>
+                        <i class="fab fa-twitter icon-footer"></i>
+                        <i class="fab fa-linkedin-in icon-footer"></i>
+
+
+
+                    </div>
+
+                    <div class="col-md-4">
+                        <h1 id="location-head">MORE DETALIS</h1> <br>
+                        <p id="bit-p">We believe that the future of Serbia
+                            firmly depends on our ability to scale
+                            the number of individuals involved in
+                            the IT secotr. That is why we founded
+                            <span id="bit">BIT</span></p>
+
+                    </div>
+
+                    <div class="col-md-12">
+                        <h6 id="copyright">Copyright © Bit Student 2017</h6>
+                    </div>
+                </div>
+
+
+            </div>
+
+
+
+
+
+
+
+
+
+        </footer>
+
+
 
 
     </div>
