--- a/BitShow/index.html
+++ b/BitShow/index.html
@@ -16,8 +16,7 @@
         <input type="text" placeholder="Search" class="input-search">
     </header>
 
-    <div class="main-wrap">
-
+    <div class="container">
     </div>
 
 
